# linux-system-programming

./: CMakeLists.txt  build.sh
lib/: CMakeLists.txt  ename.c.inc  error_functions.c  error_functions.h  get_num.c  get_num.h  tlpi_hdr.h
lib/usergroup/: CMakeLists.txt  usergroup_functions.c  usergroup_functions.h
targets/: CMakeLists.txt  greet-to-file.c
targets/fileio/: CMakeLists.txt  copy.c  rawcopy.c  seek_io.c  t_readv.c  teeio.c
targets/memalloc/: CMakeLists.txt  freeandbreak.c
targets/proc/: CMakeLists.txt  changeenv.c  longjump.c  memsegment.c
targets/proccred/: CMakeLists.txt  idshow.c
targets/time/: CMakeLists.txt  calendartime.c
targets/usergroup/: CMakeLists.txt  checkpassword.c
